Name:CodeTools
Version:1.0
Cabal-Version: >= 1.2
License:MIT
Author:Mike Verdone
Homepage:
Category:
Synopsis:Random scripts to make life easier
Build-Type: Simple

Executable reorder_imports
  Main-Is: ReorderImports.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4

Executable reorder_imports2
  Main-Is: ReorderImports2.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4,
    MissingH >= 1.1 && < 1.2

Executable pyalphabetize
  Main-Is: PyAlphabetize.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4,
    language-python >= 0.4.0

Executable indent
  Main-Is: Indent.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4

Executable dedent
  Main-Is: Dedent.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4
